--- a/package.json
+++ b/package.json
@@ -1,44 +1,23 @@
 {
-  "name": "frontvideoservice",
+  "name": "webpack",
   "version": "1.0.0",
-  "description": "",
-  "main": "./src/index.js",
+  "description": "'webpack在vue中使用'",
+  "main": "index.js",
   "scripts": {
-    "test": "npm test",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "serve": "webpack-dev-server --hot --inline"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "xujia",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lshaohua5/webpack.git"
+  },
+  "keywords": [
+    "webpack",
+    "vue"
+  ],
+  "author": "lshaohua5",
   "license": "ISC",
-  "__npminstall_done": "Wed Oct 23 2019 16:41:47 GMT+0800 (GMT+08:00)",
-  "_from": "frontvideoservice@1.0.0",
-  "_resolved": "https://registry.npm.taobao.org/frontvideoservice/download/frontvideoservice-1.0.0.tgz",
-  "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "autoprefixer": "^9.6.5",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
-    "extract-loader": "^3.1.0",
-    "file-loader": "^4.2.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "html-withimg-loader": "^0.1.16",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
-    "postcss-loader": "^3.0.0",
-    "raw-loader": "^3.1.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "text-loader": "^0.0.1",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0"
+  "bugs": {
+    "url": "https://github.com/lshaohua5/webpack/issues"
   },
-  "dependencies": {
-    "@babel/runtime": "^7.6.3",
-    "core-js": "^3.3.3"
-  }
+  "homepage": "https://github.com/lshaohua5/webpack#readme"
 }
